test/parse/assert/assertinvalid-binary-module.txt
(assert_invalid (module "\00ASM") "bad magic")
(;; STDOUT ;;;
assert_invalid error:
  parse/assert/assertinvalid-binary-module.txt:1:18: error in binary module: @0x00000004: magic value mismatch
(assert_invalid (module "\00ASM") "bad magic")
                 ^^^^^^
;;; STDOUT ;;)
